public/content/@ep_offline/v6.0/product_installation/installation/planning/hardware.adoc
---
title: 硬件要求
weight: 1
---


服务器硬件配置与场景强相关，不同的场景下，服务器的角色、数量、硬件配置均不同。企业云平台推荐使用标准的硬件服务器，可省去部署过程中各种难以预料的兼容问题。

企业云平台对硬件的要求参考下文。

== 网络设备要求

* 要求最低使用万兆网络，接入交换机或汇聚交换机均为 2 台，用于配置高可用的网络架构。
* 所有网络链路均要求有冗余。各服务器均需双口网卡，且需将两个网口做 Bond，Bond 配置为 mode1 或 mode4，交换机端需支持 mode1 或者 mode4。
* 网卡使用 Intel 82599 芯片系列、Mellanox CX4 /CX5 双口 10G 或 25G 网卡。


== 服务器要求

根据企业云平台的 KS 节点与 Hyper 节点的数量，我们将企业云平台划分为：小规模、中等规模与大规模环境。规模不同，对硬件的要求稍有区别。详细说明如下。

=== 小规模

* 不低于 3 台 KS 节点与 20 台 Hyper 节点。
* 各节点服务器的系统盘要求两块盘做 Raid1。根据磁盘介质不同，其容量要求稍有区别：SSD 盘容量不低于 240G，SAS 盘容量不低于 600G。	
* KS 节点的内存要求 128G 或以上。2台 KS 节点配置 40T 以上的存储空间，剩下 1台 配置 3T 或以上存储空间。
* Hyper 节点的内存要求 256G 或以上。可用数据存储空间 3T 或以上。
* 若节点服务器使用机械盘作为数据盘，其 Raid 卡需配置缓存和电容。

=== 中等规模

* 不低于 4台 KS 节点、100台 Hyper 节点、2台 VBR 节点。
* 可根据备份需求决定 VBR 节点与 SNAPSHOT 节点是否分别部署独立节点。VBR 与 SNAPSHOT 节点需配置 40T 或以上的存储空间。
* 各节点服务器的系统盘要求两块盘做 Raid1。根据磁盘介质不同，其容量要求稍有区别：SSD 盘容量不低于 240G，SAS 盘容量不低于 600G。	
* 仅要求其中 2台 KS 节点的内存配置为 64G 或以上，其余 KS 节点内存配置为 128G 或以上。

//* 2台 KS 节点配置 40T 以上的存储空间，剩下 1台 配置 3T 或以上存储空间。
* Hyper 节点的内存要求 256G 或以上。可用数据存储空间为 3T 或以上。
* 若节点服务器使用机械盘作为数据盘，其 Raid 卡需配置缓存和电容。

=== 大规模

* 不低于 6台 KS 节点、100台 Hyper 节点、2台 VBR 节点、4台 SNAPSHOT 节点，2台 VG 节点是可选的。
//* 可根据备份需求决定 VBR 节点与 SNAPSHOT 节点是否分别部署独立节点。VBR 与 SNAPSHOT 节点需配置 40T 或以上的存储空间。
* 各节点服务器的系统盘要求两块盘做 Raid1。根据磁盘介质不同，其容量要求稍有区别：SSD 盘容量不低于 240G，SAS 盘容量不低于 600G。	
* 要求 6台 KS 节点的内存配置为 96G 或以上。
* 要求 2台 VG 节点的内存配置为 64G 或以上。
* 要求 4台 SNAPSHOT 节点的内存配置为 64G 或以上。
* 要求 2台 VBR 节点的内存配置为 64G 或以上，数据盘配置 3.2T 或以上，且数据盘需配置 Flash 卡。


//* 2台 KS 节点配置 40T 以上的存储空间，剩下 1台 配置 3T 或以上存储空间。
* Hyper 节点的内存要求 256G 或以上。可用数据存储空间为 3T 或以上。
* 若节点服务器使用机械盘作为数据盘，其 Raid 卡需配置缓存和电容。



