public/content/@ep_offline/v6.2/product_installation/installation/planning/hardware.adoc
---
title: 硬件要求
weight: 1
---


服务器硬件配置与场景强相关，不同的场景下，服务器的角色、数量、硬件配置均不同。{product_name}推荐使用标准的硬件服务器，可省去部署过程中各种难以预料的兼容问题。

{product_name}对硬件的要求参考下文。

== 网络设备要求

* 要求最低使用万兆网络，接入交换机或汇聚交换机均为 2 台，用于配置高可用的网络架构。
* 所有网络链路均要求有冗余。各服务器均需双口网卡，且需将两个网口做 Bond，Bond 配置为 mode1 或 mode4，交换机端需支持 mode1 或者 mode4。
* 网卡使用 Intel 82599 芯片系列、Mellanox CX4 /CX5 双口 10G 或 25G 网卡。


//== 服务器要求

//根据{product_name}的 KS 节点与 Hyper 节点的数量，我们将{product_name}划分为：小规模、中等规模与大规模环境。规模不同，对硬件的要求稍有区别。详细说明如下。



// === 小规模

// * 不低于 3 台 KS 节点与 20 台 Hyper 节点。
// * 各节点服务器的系统盘要求两块盘做 Raid1。根据磁盘介质不同，其容量要求稍有区别：SSD 盘容量不低于 240G，SAS 盘容量不低于 600G。	
// * KS 节点的内存要求 128G 或以上。2台 KS 节点配置 40T 以上的存储空间，剩下 1台 配置 3T 或以上存储空间。
// * Hyper 节点的内存要求 256G 或以上。可用数据存储空间 3T 或以上。
// * 若节点服务器使用机械盘作为数据盘，其 Raid 卡需配置缓存和电容。

// === 中等规模

// * 不低于 4台 KS 节点、100台 Hyper 节点、2台 VBR 节点。
// * 可根据备份需求决定 VBR 节点与 SNAPSHOT 节点是否分别部署独立节点。VBR 与 SNAPSHOT 节点需配置 40T 或以上的存储空间。
// * 各节点服务器的系统盘要求两块盘做 Raid1。根据磁盘介质不同，其容量要求稍有区别：SSD 盘容量不低于 240G，SAS 盘容量不低于 600G。	
// * 仅要求其中 2台 KS 节点的内存配置为 64G 或以上，其余 KS 节点内存配置为 128G 或以上。

// //* 2台 KS 节点配置 40T 以上的存储空间，剩下 1台 配置 3T 或以上存储空间。
// * Hyper 节点的内存要求 256G 或以上。可用数据存储空间为 3T 或以上。
// * 若节点服务器使用机械盘作为数据盘，其 Raid 卡需配置缓存和电容。

// === 大规模

// * 不低于 6台 KS 节点、100台 Hyper 节点、2台 VBR 节点、4台 SNAPSHOT 节点，2台 VG 节点是可选的。
// //* 可根据备份需求决定 VBR 节点与 SNAPSHOT 节点是否分别部署独立节点。VBR 与 SNAPSHOT 节点需配置 40T 或以上的存储空间。
// * 各节点服务器的系统盘要求两块盘做 Raid1。根据磁盘介质不同，其容量要求稍有区别：SSD 盘容量不低于 240G，SAS 盘容量不低于 600G。	
// * 要求 6台 KS 节点的内存配置为 96G 或以上。
// * 要求 2台 VG 节点的内存配置为 64G 或以上。
// * 要求 4台 SNAPSHOT 节点的内存配置为 64G 或以上。
// * 要求 2台 VBR 节点的内存配置为 64G 或以上，数据盘配置 3.2T 或以上，且数据盘需配置 Flash 卡。


// //* 2台 KS 节点配置 40T 以上的存储空间，剩下 1台 配置 3T 或以上存储空间。
// * Hyper 节点的内存要求 256G 或以上。可用数据存储空间为 3T 或以上。
// * 若节点服务器使用机械盘作为数据盘，其 Raid 卡需配置缓存和电容。


== 服务器要求



* KS-BM 节点必须配置双网卡，并配置两路网络，一路 MGMT 网络，一路 PXE 网络，默认网关在 MGMT 网络上。

* VG 节点必须配置双网卡，并配置两路网络，一路 MGMT 网络，一路 EIP 网络，默认网关在 EIP 网络上。
* 对于网络隔离模式为 VLAN 的场景，一定要确保所有 Hyper 节点的网卡名都一致且对应。
* 如果需要在 KS 节点上配置一路网络用于与个人笔记本互通，务必使用 `192.168.254.0/24` 这个网段。


== 磁盘要求

除 VG 节点外，所有节点服务器均需配有数据盘，其中 Seed、VBR 以及 Snapshot 这类冷存储节点上的数据盘空间要充足。

{product_name}支持使用机械盘，机械盘的性能影响着业务性能。为尽可能提升性能，特对机械盘做出如下要求。



* 硬件 RAID 是否自带缓存对机械盘的性能影响较大，因此，我们对 `RAID50` 与 `RAID10` 做如下要求。

** RAID50：必须使用带缓存的硬件 RAID。
** RAID10：使用硬件 RAID 时，可以不带缓存。

* iCAS 对顺序读写使用直通模式，即 `seq-cutoff`，避免顺序读写占用缓存。

* 为提高缓存的利用率，需要缓存空间尽可能的大。所以在做 CAS 设备的时候，要避免将一块 SSD 磁盘分成多个区使用。正确的做法是将整块 SSD 磁盘做成共享的缓存设备，再分给两个 DRBD 使用。

* 最佳实践方案可参考：

** iCAS 缓存和 Core 存储之间的容量配比在 1:10。
** iCAS + SDS 1.0 + 带至少 1G 缓存的硬件 RAID + RAID50。
** iCAS + SDS 1.0 + 不带缓存的硬件 RAID + RAID10。


磁盘做 RAID 的过程，不在这里描述，这里仅列举说明 RAID 配置要求。


